Make generated models pass mypy tests

--- a/.openapi-generator/custom-templates/model_generic.mustache
+++ b/.openapi-generator/custom-templates/model_generic.mustache
@@ -165,26 +165,26 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
         {{#items.isArray}}
         {{^items.items.isPrimitiveType}}
         # override the default output from pydantic by calling `to_dict()` of each item in {{{name}}} (list of list)
-        _items = []
+        _{{{name}}}_items = []
         if self.{{{name}}}:
-            for _item in self.{{{name}}}:
-                if _item:
-                    _items.append(
-                         [_inner_item.to_dict() for _inner_item in _item if _inner_item is not None]
+            for _{{{name}}}_item in self.{{{name}}}:
+                if _{{{name}}}_item:
+                    _{{{name}}}_items.append(
+                         [_inner_item.to_dict() for _inner_{{{name}}}_item in _{{{name}}}_item if _inner_{{{name}}}_item is not None]
                     )
-            _dict['{{{baseName}}}'] = _items
+            _dict['{{{baseName}}}'] = _{{{name}}}_items
         {{/items.items.isPrimitiveType}}
         {{/items.isArray}}
         {{^items.isArray}}
         {{^items.isPrimitiveType}}
         {{^items.isEnumOrRef}}
         # override the default output from pydantic by calling `to_dict()` of each item in {{{name}}} (list)
-        _items = []
+        _{{{name}}}_items = []
         if self.{{{name}}}:
-            for _item in self.{{{name}}}:
-                if _item:
-                    _items.append(_item.to_dict())
-            _dict['{{{baseName}}}'] = _items
+            for _{{{name}}}_item in self.{{{name}}}:
+                if _{{{name}}}_item:
+                    _{{{name}}}_items.append(_{{{name}}}_item.to_dict())
+            _dict['{{{baseName}}}'] = _{{{name}}}_items
         {{/items.isEnumOrRef}}
         {{/items.isPrimitiveType}}
         {{/items.isArray}}
@@ -198,7 +198,7 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
             for _key in self.{{{name}}}:
                 if self.{{{name}}}[_key] is not None:
                     _field_dict_of_array[_key] = [
-                        _item.to_dict() for _item in self.{{{name}}}[_key]
+                        _{{{name}}}_item.to_dict() for _{{{name}}}_item in self.{{{name}}}[_key]
                     ]
             _dict['{{{baseName}}}'] = _field_dict_of_array
         {{/items.items.isPrimitiveType}}
