--- a/.openapi-generator/custom-templates/model_oneof.mustache
+++ b/.openapi-generator/custom-templates/model_oneof.mustache
@@ -7,7 +7,7 @@ import pprint
 {{#vendorExtensions.x-py-model-imports}}
 {{{.}}}
 {{/vendorExtensions.x-py-model-imports}}
-from typing import Union, Dict
+from typing import Union, Dict, Set
 from typing_extensions import Literal, Self
 
 {{#lambda.uppercase}}{{{classname}}}{{/lambda.uppercase}}_ONE_OF_SCHEMAS = [{{#oneOf}}"{{.}}"{{^-last}}, {{/-last}}{{/oneOf}}]
@@ -21,7 +21,7 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
     {{vendorExtensions.x-py-name}}: {{{vendorExtensions.x-py-typing}}}
 {{/composedSchemas.oneOf}}
     actual_instance: Optional[Union[{{#oneOf}}{{{.}}}{{^-last}}, {{/-last}}{{/oneOf}}]] = None
-    one_of_schemas: List[str] = Field(default=Literal[{{#oneOf}}"{{.}}"{{^-last}}, {{/-last}}{{/oneOf}}])
+    one_of_schemas: Set[str] = { {{#oneOf}}"{{.}}"{{^-last}}, {{/-last}}{{/oneOf}} }
 
     model_config = ConfigDict(
         validate_assignment=True,
@@ -37,7 +37,7 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
     }
 {{/discriminator}}
 
-    def __init__(self, *args, **kwargs) -> None:
+    def __init__(self, *args: Any, **kwargs: Any) -> None:
         if args:
             if len(args) > 1:
                 raise ValueError("If a position argument is used, only 1 is allowed to set `actual_instance`")
@@ -48,13 +48,13 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
             super().__init__(**kwargs)
 
     @field_validator('actual_instance')
-    def actual_instance_must_validate_oneof(cls, v):
+    def actual_instance_must_validate_oneof(cls, v: Union[{{#oneOf}}{{{.}}}{{^-last}}, {{/-last}}{{/oneOf}}]) -> Union[{{#oneOf}}{{{.}}}{{^-last}}, {{/-last}}{{/oneOf}}]:
         {{#isNullable}}
         if v is None:
             return v
 
         {{/isNullable}}
-        error_messages = []
+        error_messages: List[str] = []
         match = 0
         {{#composedSchemas.oneOf}}
         # validate data type: {{{dataType}}}
@@ -93,15 +93,15 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
             return v
 
     @classmethod
-    def from_dict(cls, obj: Union[str, Dict[str, Any]]) -> Self:
+    def from_dict(cls, obj: Union[str, Dict[str, Any]]) -> {{{classname}}}:
         return cls.from_json(json.dumps(obj))
 
     @classmethod
     {{#isNullable}}
-    def from_json(cls, json_str: Optional[str]) -> Self:
+    def from_json(cls, json_str: Optional[str]) -> {{{classname}}}:
     {{/isNullable}}
     {{^isNullable}}
-    def from_json(cls, json_str: str) -> Self:
+    def from_json(cls, json_str: str) -> {{{classname}}}:
     {{/isNullable}}
         """Returns the object represented by the json string"""
         instance = cls.model_construct()
@@ -110,7 +110,7 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
             return instance
 
         {{/isNullable}}
-        error_messages = []
+        error_messages: List[str] = []
         match = 0
 
         {{#useOneOfDiscriminatorLookup}}
