--- a/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
@@ -25,7 +25,7 @@ if __name__ == "__main__":
 
     {{ stelselgroep.name }} = {{ className }}()
     with open(
-        "./tests/data/input/generiek/37101000032.json", "r+"
+        "tests/data/generiek/input/37101000032.json", "r+"
     ) as file:
         eenheid = EenhedenEenheid.model_validate_json(file.read())
 
