Setup code coverage

--- a/woningwaardering/templates/stelsels/stelsel/stelsel.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelsel.py.j2
@@ -20,7 +20,7 @@ class {{ className }}(Stelsel):
         )
 
 
-if __name__ == "__main__":
+if __name__ == "__main__":  # pragma: no cover
     logger.enable("woningwaardering")
 
     {{ stelsel.name }} = {{ className }}()
