--- a/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroepversie.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroepversie.py.j2
@@ -18,8 +18,8 @@ from woningwaardering.vera.referentiedata import (
 
 
 class {{ className }}(Stelselgroepversie):
-    @staticmethod
     def bereken(
+        self,
         eenheid: EenhedenEenheid,
         woningwaardering_resultaat: (
             WoningwaarderingResultatenWoningwaarderingResultaat | None
