--- a/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
@@ -14,12 +14,13 @@ from woningwaardering.vera.referentiedata import (
 
 
 class {{ className }}(Stelselgroep):
-    def __init__(self, peildatum: date = date.today(), config: Stelselconfig | None = None) -> None:
-        self.stelsel = {{ stelsel }}
-        self.stelselgroep = {{ stelselgroep }}
-        super().__init__(peildatum=peildatum, config=config)
-
-
+    def __init__(self, stelsel: Woningwaarderingstelsel = {{ stelsel }}, stelselgroep: Woningwaarderingstelselgroep = {{ stelselgroep }}  peildatum: date = date.today(), config: Stelselconfig | None = None) -> None:
+        super().__init__(
+            stelsel=stelsel,
+            stelselgroep=stelselgroep,
+            peildatum=peildatum,
+            config=config,
+        )
 if __name__ == "__main__":  # pragma: no cover
     logger.enable("woningwaardering")
 
