--- a/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
@@ -1,12 +1,17 @@
 from datetime import date
+from decimal import Decimal
 
 from loguru import logger
 
 from woningwaardering.stelsels import utils
-
 from woningwaardering.stelsels.stelselgroep import Stelselgroep
 from woningwaardering.vera.bvg.generated import (
     EenhedenEenheid,
+    WoningwaarderingResultatenWoningwaardering,
+    WoningwaarderingResultatenWoningwaarderingCriterium,
+    WoningwaarderingResultatenWoningwaarderingCriteriumGroep,
+    WoningwaarderingResultatenWoningwaarderingGroep,
+    WoningwaarderingResultatenWoningwaarderingResultaat,
 )
 from woningwaardering.vera.referentiedata import (
     Woningwaarderingstelsel,
@@ -18,32 +23,69 @@ class {{ className }}(Stelselgroep):
     def __init__(
         self,
         peildatum: date = date.today(),
-        config: Stelselconfig | None = None,
     ) -> None:
-        super().__init__(
-            stelsel={{ stelsel }},,
-            stelselgroep={{ stelselgroep }},
-            peildatum=peildatum,
-            config=config,
+        self.stelsel = {{ stelsel }}
+        self.stelselgroep = {{ stelselgroep }}
+        self.peildatum = peildatum
+
+    def bereken(
+        self,
+        eenheid: EenhedenEenheid,
+        woningwaardering_resultaat: (
+            WoningwaarderingResultatenWoningwaarderingResultaat | None
+        ) = None,
+    ) -> WoningwaarderingResultatenWoningwaarderingGroep:
+        woningwaardering_groep = WoningwaarderingResultatenWoningwaarderingGroep(
+            criteriumGroep=WoningwaarderingResultatenWoningwaarderingCriteriumGroep(
+                stelsel={{ stelsel }}.value,
+                stelselgroep={{ stelselgroep }}.value,
+            )
         )
+
+        woningwaardering_groep.woningwaarderingen = []
+
+        woningwaardering_groep.woningwaarderingen.append(
+            WoningwaarderingResultatenWoningwaardering(
+                criterium=WoningwaarderingResultatenWoningwaarderingCriterium(
+                    naam="NotImplemented"
+                )
+            )
+        )
+
+        punten = utils.rond_af(
+            sum(
+                Decimal(str(woningwaardering.punten))
+                for woningwaardering in woningwaardering_groep.woningwaarderingen or []
+                if woningwaardering.punten is not None
+            ),
+            decimalen=0,
+        )
+
+        woningwaardering_groep.punten = float(punten)
+
+        logger.info(
+            f'Eenheid {eenheid.id} wordt gewaardeerd met {woningwaardering_groep.punten} punten voor stelselgroep {{ "{" }}{{ stelselgroep }}.naam{{ "}" }}'
+        )
+        return woningwaardering_groep
+
 
 if __name__ == "__main__":  # pragma: no cover
     logger.enable("woningwaardering")
 
-    {{ stelselgroep.name }} = {{ className }}()
+    {{ stelselgroep.name }} = {{ className }}(peildatum=date(2024, 1, 1))  # TODO: Peildatum
     with open(
         "tests/data/generiek/input/37101000032.json", "r+"
     ) as file:
         eenheid = EenhedenEenheid.model_validate_json(file.read())
 
-        woningwaardering_resultaat = {{ stelselgroep.name }}.bereken(eenheid)
+    woningwaardering_resultaat = {{ stelselgroep.name }}.bereken(eenheid)
 
-        print(
-            woningwaardering_resultaat.model_dump_json(
-                by_alias=True, indent=2, exclude_none=True
-            )
+    print(
+        woningwaardering_resultaat.model_dump_json(
+            by_alias=True, indent=2, exclude_none=True
         )
+    )
 
-        tabel = utils.naar_tabel(woningwaardering_resultaat)
+    tabel = utils.naar_tabel(woningwaardering_resultaat)
 
-        print(tabel)
+    print(tabel)
