Initialiseer stelselgroepen in super

--- a/woningwaardering/templates/stelsels/stelsel/stelsel.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelsel.py.j2
@@ -27,7 +27,7 @@ class {{ className }}(Stelsel):
             peildatum=peildatum,
             stelselgroepen=[
                 {%- for stelselgroep, className in stelselgroepen %}
-                {{ className }}(peildatum=date.fromisoformat("{{ begindatum }}")),
+                {{ className }},
                 {%- endfor %}
             ],
         )
