Zet peildatum op begindatum in stelselgroep boilerplate

--- a/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
@@ -72,7 +72,10 @@ class {{ className }}(Stelselgroep):
 if __name__ == "__main__":  # pragma: no cover
     logger.enable("woningwaardering")
 
-    {{ stelselgroep.name }} = {{ className }}(peildatum=date(2024, 1, 1))  # TODO: Peildatum
+    {{ stelselgroep.name }} = {{ className }}(
+        peildatum=date.fromisoformat("{{ begindatum }}")
+    )
+
     with open(
         "tests/data/generiek/input/37101000032.json", "r+"
     ) as file:
