--- a/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
@@ -76,23 +76,21 @@ class {{ className }}(Stelselgroep):
 if __name__ == "__main__":  # pragma: no cover
     logger.enable("woningwaardering")
 
-    {{ stelselgroep.name }} = {{ className }}(
+    stelselgroep = {{ className }}(
         peildatum=date.fromisoformat("{{ begindatum }}")
     )
 
     with open(
-        "tests/data/generiek/input/37101000032.json", "r+"
+        "tests/data/generiek/input/37101000032.json",
+        "r+",
     ) as file:
         eenheid = EenhedenEenheid.model_validate_json(file.read())
 
-    woningwaardering_resultaat = {{ stelselgroep.name }}.bereken(eenheid)
-
-    print(
-        woningwaardering_resultaat.model_dump_json(
-            by_alias=True, indent=2, exclude_none=True
-        )
+    resultaat = WoningwaarderingResultatenWoningwaarderingResultaat(
+        groepen=[stelselgroep.bereken(eenheid)]
     )
+    print(resultaat.model_dump_json(by_alias=True, indent=2, exclude_none=True))
 
-    tabel = utils.naar_tabel(woningwaardering_resultaat)
+    tabel = utils.naar_tabel(resultaat)
 
     print(tabel)
