criteriumGroep gebaseerd op self.stelsel en self.stelselgroep

--- a/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelselgroep/stelselgroep.py.j2
@@ -41,8 +41,8 @@ class {{ className }}(Stelselgroep):
     ) -> WoningwaarderingResultatenWoningwaarderingGroep:
         woningwaardering_groep = WoningwaarderingResultatenWoningwaarderingGroep(
             criteriumGroep=WoningwaarderingResultatenWoningwaarderingCriteriumGroep(
-                stelsel={{ stelsel }}.value,
-                stelselgroep={{ stelselgroep }}.value,
+                stelsel=self.stelsel.value,
+stelselgroep=self.stelselgroep.value,
             )
         )
 
