--- a/woningwaardering/templates/stelsels/stelsel/stelsel.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelsel.py.j2
@@ -46,7 +46,7 @@ if __name__ == "__main__":  # pragma: no cover
         "r+",
     ) as file:
         eenheid = EenhedenEenheid.model_validate_json(file.read())
-        woningwaardering_resultaat = {{ stelsel.name }}.bereken(eenheid)
+        woningwaardering_resultaat = {{ stelsel.name }}.waardeer(eenheid)
         print(
             woningwaardering_resultaat.model_dump_json(
                 by_alias=True, indent=2, exclude_none=True
