Gebruik EenhedenEenheidbericht ipv Eenheid zodat we ook extra-attributen kunnen definieren

--- a/woningwaardering/templates/stelsels/stelsel/stelsel.py.j2
+++ b/woningwaardering/templates/stelsels/stelsel/stelsel.py.j2
@@ -12,7 +12,7 @@ from woningwaardering.stelsels.{{ stelsel.name }} import (
     {%- endfor %}
 )
 from woningwaardering.vera.bvg.generated import (
-    EenhedenEenheid,
+    EenhedenEenheidbericht,
 )
 from woningwaardering.vera.referentiedata import (
     Woningwaarderingstelsel,
